[package]
name = "constellation"
version = "0.1.0"
edition = "2021"
default-run = "main"


[dependencies]
anyhow = "1.0.95"
diesel-async = { version = "0.5.2", features = ["postgres", "bb8", "pool"] }
tokio-postgres = "0.7.7"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
bincode = "1.3.3"
clap = { version = "4.5.26", features = ["derive"] }
ctrlc = "3.4.5"
fs4 = { version = "0.12.0", features = ["sync"] }
headers-accept = "0.1.4"
links = { path = "../links" }
mediatype = "0.19.18"
num-format = "0.4.4"
ratelimit = "0.10.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.139"
serde_with = { version = "3.12.0", features = ["hex"] }
tinyjson = "2.5.1"
tokio-util = "0.7.13"
tower-http = { version = "0.6.2", features = ["cors"] }
zstd = "0.13.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenvy = { git = "https://github.com/allan2/dotenvy.git", rev = "86c0d6d", features = ["macros"] }
bb8 = "0.9.0"
chrono = "0.4.41"
diesel = { version = "2.2.10", features = ["chrono"] }
tokio-console = "0.1.13"
console-subscriber = "0.4.1"

[dependencies.tokio]
version = "1.44"
features = ["full"]

[dependencies.tungstenite]
version = "0.26.1"
features = ["native-tls"]

[dev-dependencies]
tempfile = "3.15.0"

