[package]
authors = ["videah <videah@selfish.systems>", "phil <phil@bad-example.com>"]
name = "jetstream"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Library for easily interacting with and consuming the Bluesky Jetstream service."
repository = "https://github.com/at-microcosm/links"
readme = "README.md"

[dependencies]
async-trait = "0.1.83"
atrium-api = { version = "0.25", default-features = false, features = [
    "namespace-appbsky",
] }
tokio = { version = "1.41.1", features = ["full", "sync", "time"] }
tokio-tungstenite = { version = "0.26.2", features = [
    "connect",
    "native-tls-vendored",
    "url",
] }
futures-util = "0.3.31"
url = "2.5.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
chrono = "0.4.38"
zstd = "0.13.2"
thiserror = "2.0.3"
log = "0.4.22"

[dev-dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
