[package]
name = "link_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
axum-metrics = "0.2"
bincode = "1.3.3"
clap = { version = "4.5.26", features = ["derive"] }
flume = { version = "0.11.1", default-features = false }
fs4 = { version = "0.12.0", features = ["sync"] }
links = { path = "../links" }
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.1", default-features = false, features = ["http-listener"] }
metrics-process = "2.4.0"
rocksdb = { version = "0.23.0", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
tinyjson = "2.5.1"
zstd = "0.13.2"

[dependencies.tokio]
version = "1.41"
features = ["full"]

[dependencies.tungstenite]
version = "0.24"
features = ["native-tls"]

[dev-dependencies]
tempfile = "3.15.0"

[features]
default = ["rocks"]
rocks = ["dep:rocksdb"]
