[package]
name = "link_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
askama = "0.12.1"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum-metrics = "0.2"
bincode = "1.3.3"
clap = { version = "4.5.26", features = ["derive"] }
ctrlc = "3.4.5"
flume = { version = "0.11.1", default-features = false }
fs4 = { version = "0.12.0", features = ["sync"] }
headers-accept = "0.1.4"
links = { path = "../links" }
mediatype = "0.19.18"
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.1", default-features = false, features = ["http-listener"] }
metrics-process = "2.4.0"
rocksdb = { version = "0.23.0", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["hex"] }
tinyjson = "2.5.1"
tokio-util = "0.7.13"
zstd = "0.13.2"

[dependencies.tokio]
version = "1.41"
features = ["full"]

[dependencies.tungstenite]
version = "0.26.1"
features = ["native-tls"]

[dev-dependencies]
tempfile = "3.15.0"

[features]
default = ["rocks"]
rocks = ["dep:rocksdb"]
