[package]
name = "ufos"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
dropshot = "0.16.0"
env_logger = "0.11.7"
fjall = { version = "2.6.7", features = ["miniz", "bytes", "single_writer_tx"], default-features = false }
jetstream = { path = "../jetstream" }
log = "0.4.26"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full", "sync", "time"] }
