[package]
name = "ufos-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.ufos]
path = ".."

[dependencies.jetstream]
path = "../../jetstream"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"

[[bin]]
name = "counts_value"
path = "fuzz_targets/counts_value.rs"
test = false
doc = false
bench = false
